# icfpc2024

./: Cargo.toml  Makefile  README.md  compress-lambdaman-1.py  compress-lambdaman-2.py  icfp.py  icfp.scm
.github/workflows/: rust_test.yaml
data/3d/: 3d1.kaku.5259.out  3d1.kaku.hardcoded.out  3d1.kaku.out  3d1.koudai.manual.out  3d1.manual.out  3d1.ryosuke.manual.out  3d10.kaku.manual.out  3d11.kaku.manual.out  3d11.kaku.out  3d11.ryosuke.generated.out  3d11.ryosuke.manual.out  3d11.ryosuke.manual.py  3d12.ryosuke.manual.out  3d12.ryosuke.manual.py  3d2.kaku.manual.out  3d2.koudai.manual.out  3d2.ryosuke.manual.out  3d3.kaku.manual.out  3d3.koudai.manual.out  3d3.ryosuke.manual.out  3d4.kaku.5148.out  3d4.kaku.manual.out  3d4.koudai.manual.out  3d4.ryosuke.manual.out  3d5.kaku.manual.out  3d5.koudai.manual.out  3d6.kaku.3840.out  3d6.kaku.manual  3d6.koudai.manual.out  3d7.kaku.manual.out  3d7.koudai.manual.out  3d8.koudai.manual.out  3d9.kaku.manual.out  problem.md
data/efficiency/: efficiency1.ast  efficiency10.ast  efficiency11.ast  efficiency12.ast  efficiency13.ast  efficiency2.ast  efficiency3.ast  efficiency4.ast  efficiency5.ast  efficiency6.ast  efficiency7.ast  efficiency7.cnf  efficiency8.ast  efficiency8.cnf  efficiency9.ast
data/lambdaman/: lambdaman10.toga.out  (+59 more)
naoya/: compress-lambdaman-1.py  compress-lambdaman-2-orig.py  compress-lambdaman-2.py  decode.py  icfp.scm  send.sh
pes/: spaceship_beam.cpp  spaceship_beam_fixed.cpp  spaceship_reorder.cpp
src/: assemble.rs  ast.rs  lib.rs  token.rs
tests/: eval.rs
visualizer/: Cargo.toml  README.md
(+105 files in other folders)
