[package]
name = "icfpc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
itertools = "0.13.0"
num-bigint = "0.4.6"
reqwest = "0.12.5"
rustyline = "14.0.0"
tokio = { version = "1.38.0", features = ["full"] }

[dev-dependencies]
rstest = "0.21.0"
